--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-*.bak
 .DS_Store
 node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
