--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "2.4.6",
+    "file-saver": "^2.0.0",
     "js-cookie": "2.2.0",
     "moment": "^2.22.2",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "vue": "2.5.17",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "autoprefixer": "8.5.0",
@@ -60,6 +62,7 @@
     "rimraf": "2.6.2",
     "sass-loader": "7.0.3",
     "script-ext-html-webpack-plugin": "2.0.1",
+    "script-loader": "^0.7.2",
     "semver": "5.5.0",
     "shelljs": "0.8.2",
     "svg-sprite-loader": "3.8.0",
